# travel-planner

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml  railway.toml
backend/app/: __init__.py  config.py  main.py  version.py
backend/app/agents/: chat_agent.py  extraction.py
backend/app/api/: auth.py
backend/app/api/routes/: __init__.py  chat.py  ingest.py  places.py
backend/app/models/: __init__.py  chat.py  place.py  session.py  video.py
backend/app/observability/: __init__.py  langfuse_client.py  privacy.py  tracing.py
backend/app/services/: chat_agent.py  extraction.py  llm_client.py  session_manager.py  youtube.py
backend/app/utils/: errors.py  logger.py
backend/tests/: test_e2e.py  test_session.py  test_youtube.py
backend/tests/unit/: test_extraction.py  test_session.py  test_youtube.py
frontend/: .gitignore  README.md  middleware.ts  package.json  playwright.config.ts  pnpm-lock.yaml  railway.toml
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/api/waitlist/: route.ts
frontend/app/health/: page.tsx
frontend/app/landing/: error.tsx  page.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
frontend/components/: ChatDrawer.tsx  ChatInterface.tsx  FeatureGrid.tsx  Footer.tsx  GradientBackground.tsx  GradientBackgroundAnimated.tsx  HeroSection.tsx  LoadingState.tsx  PlaceSummary.tsx  SourceVideos.tsx  VideoInput.tsx  WaitlistForm.tsx
frontend/lib/: api-client.ts  api.ts  types.ts
frontend/tests/e2e/: health.spec.ts  home.spec.ts
frontend/tests/e2e/fixtures/: auth.ts
