[project]
name = "travel-planner-backend"
version = "0.1.0"
description = "AI-powered travel planner backend with observability"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "youtube-transcript-api>=0.6.2",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "langfuse>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "clerk-backend-api>=1.0.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks.dev]
cmd = "uvicorn app.main:app --reload"
help = "Run the development server with auto-reload"

[tool.poe.tasks.lint]
cmd = "ruff check ."
help = "Run the linter (add --fix to auto-fix issues)"

[tool.poe.tasks.test]
cmd = "pytest"
help = "Run the test suite (disabled Langfuse tracing during tests)"
env = { LANGFUSE_TRACING_ENABLED = "false" }

[tool.poe.tasks.testci]
cmd = "pytest"
help = "Run the test suite as it would in CI environment"
env = { LANGFUSE_TRACING_ENABLED = "false", CI = "true", RUN_LLM_TESTS = "false" }
