[project]
name = "travel-planner-backend"
version = "0.1.0"
description = "AI-powered travel planner backend with observability"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.37.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "langchain>=1.0.5",
    "langchain-openai>=1.0.2",
    "langchain-anthropic>=1.0.2",
    "youtube-transcript-api>=1.2.3",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.0.59b0",
    "langfuse>=3.9.1",
    "python-dotenv>=1.2.1",
    "httpx>=0.28.1",
    "clerk-backend-api>=3.3.1",
    "pyjwt>=2.10.1",
    "cryptography>=45.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks.dev]
cmd = "uvicorn app.main:app --reload"
help = "Run the development server with auto-reload"

[tool.poe.tasks.lint]
cmd = "ruff check ."
help = "Run the linter (add --fix to auto-fix issues)"

[tool.poe.tasks.test]
cmd = "pytest"
help = "Run the test suite (disabled Langfuse tracing during tests)"
env = { LANGFUSE_TRACING_ENABLED = "false" }

[tool.poe.tasks.testci]
cmd = "pytest"
help = "Run the test suite as it would in CI environment"
env = { LANGFUSE_TRACING_ENABLED = "false", CI = "true", RUN_LLM_TESTS = "false" }
